# agent_control_plane

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_init.py
docs/: architecture.md  policies.md  replay.md  security.md
examples/: toy_agent.py
examples/mcp_demo/: demo.py  policy.yaml  server.py
policies/: default.yaml
scripts/: seed_data.py
src/acp_backend/: database.py
src/acp_backend/api/: main.py
src/acp_backend/core/: auth.py  config.py  logging.py  security.py  utils.py
src/acp_backend/models/: base.py  entities.py
src/acp_backend/schemas/: mcp.py  policy.py  tool.py  trace.py
src/acp_backend/services/: audit.py  dlp.py  policy.py  rate_limit.py
src/acp_backend/tooling/: http_connector.py  internal_tools.py  mcp_connector.py
src/acp_cli/: main.py
src/acp_sdk/: client.py
src/agent_control_plane.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_api_flow.py  test_audit.py  test_auth.py  test_cli.py  test_constraints.py  test_dlp.py  test_mcp_connector.py  test_policy.py  test_sdk_integration.py
tests/adversarial/: test_adversarial.py
